--- a/config.yaml
+++ b/config.yaml
@@ -22,18 +22,16 @@ md_wechat_path: './docs/wechat.md'
 
 # keywords to search
 keywords:
-    "SLAM": 
-        filters: ["SLAM", "Visual Odometry"]
-    "SFM":
-        filters: ["SFM", "Structure from Motion"]
-    "Visual Localization":
-        filters: ["Visual Localization","Camera Localization",
-                  "Camera Re-localisation","Loop Closure Detection",
-                  "visual place recognition","image retrieval"]
-    "Keypoint Detection":
-        filters: ["Keypoint Detection", "Feature Descriptor"]
-    "Image Matching":
-        filters: ["Image Matching", "Keypoint Matching", 
-                  "Line Segment Detection", "Local Feature Matching"]
-    "NeRF":
-        filters: ["NeRF"]
+    "Compression":
+        filters: ["Compression", 
+                  "Image Compression",
+                  "Video Compression",
+                  "Data Compression",
+                  "Neural Compression",
+                  "Network Compression",
+                  "Image Coding",
+                  "Video Coding",
+                  "AIGC for Compression",
+                  "Generative Compression",
+                  "LLM Compression"]
+
